[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'marketplace'
version = '1.0.0'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.marketplace-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[[bin]]
name = 'marketplace'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'
