[workspace]
members = []

[lib]
crate-type = ['cdylib']

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'marketplace-runtime-wasm'
version = '1.0.0'
[dependencies.marketplace-runtime]
default-features = false
path = '..'
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['marketplace-runtime/std']
